--- a/sobre.html
+++ b/sobre.html
@@ -25,8 +25,7 @@
   </header>
   <main>
     <div id="content">
-      <p>Un sitio en el que a veces escribo. Entended que no
-      publique según que códigos…</p>
+      <p>Un sitio en el que a veces escribo.</p>
       <p>Gracias por vuestra visita.</p>
     </div>
   </main>
