--- a/asteroids-deluxe.html
+++ b/asteroids-deluxe.html
@@ -49,9 +49,9 @@
           </figcaption>
         </figure>
         <hr>
-        <p><em>Asteroids Deluxe</em> © Atari Inc. 1981, diseñado
-        por <strong>Dave Shepperd</strong>, es una versión mejorada
-        del <em>Asteroids</em> (1979) de <strong>Lyle
+        <p><strong>Asteroids Deluxe</strong> © Atari Inc. 1981,
+        diseñado por <strong>Dave Shepperd</strong>, es una versión
+        mejorada del <em>Asteroids</em> (1979) de <strong>Lyle
         Rains</strong> y <strong>Ed Logg</strong>.</p>
       </div>
     </article>
