--- a/galaga.html
+++ b/galaga.html
@@ -40,7 +40,7 @@
           </figcaption>
         </figure>
         <hr>
-        <p><em>Galaga</em> © Namco/Midway 1981, secuela de
+        <p><strong>Galaga</strong> © Namco/Midway 1981, secuela de
         <em>Galaxian</em> (1979), diseñado por <strong>Shigeru
         Yokoyama</strong>, programación de <strong>Hiroshi
         Ono</strong> y gráficos de <strong>Tetsu
