--- a/pac-man.html
+++ b/pac-man.html
@@ -43,8 +43,8 @@
           </figcaption>
         </figure>
         <hr>
-        <p><em>Pac-Man</em> © Namco/Midway 1980, diseñado por
-        <strong>Toru Iwatani</strong> y programado por
+        <p><strong>Pac-Man</strong> © Namco/Midway 1980, diseñado
+        por <strong>Toru Iwatani</strong> y programado por
         <strong>Shigeo Funaki</strong> y <strong>Shigeichi
         Ishimura</strong>.</p>
         <p>Los <em>sprites</em> son de una <em>screenshot</em> del
