--- a/pokemon-rojo.html
+++ b/pokemon-rojo.html
@@ -89,9 +89,9 @@
           </figcaption>
         </figure>
         <hr>
-        <p>Pokémon Rojo © Game Freak/Nintendo 1996, diseñado por
-        <strong>Satoshi Tajiri</strong> y <strong>Ken
-        Sugimori</strong>.</p>
+        <p><strong>Pokémon Rojo</strong> © Game Freak/Nintendo
+        1996, diseñado por <strong>Satoshi Tajiri</strong> y
+        <strong>Ken Sugimori</strong>.</p>
         <p>Los <em>sprites</em> los saqué de <a href=
         "https://www.spriters-resource.com/game_boy_gbc/pokemonredblue/"
         rel="external">Spriters Resource</a>.</p>
