--- a/super-mario-bros-3.html
+++ b/super-mario-bros-3.html
@@ -41,9 +41,9 @@
           </figcaption>
         </figure>
         <hr>
-        <p><em>Super Mario Bros. 3</em> © Nintendo 1988, diseñado
-        por <strong>Shigeru Miyamoto</strong> y <strong>Takashi
-        Tezuka</strong>.</p>
+        <p><strong>Super Mario Bros. 3</strong> © Nintendo 1988,
+        diseñado por <strong>Shigeru Miyamoto</strong> y
+        <strong>Takashi Tezuka</strong>.</p>
         <p>Los <em>sprites</em> los saqué de <a href=
         "https://www.spriters-resource.com/nes/supermariobros3/"
         rel="external">Spriters Resource</a>.</p>
